z-index: 6 to prevent GalleryPostImage overlays from displaying ontop of the carousel

--- a/src/gallery/scss/_gallery-carousel.scss
+++ b/src/gallery/scss/_gallery-carousel.scss
@@ -6,6 +6,7 @@
     top: 0;
     left: 0;
     background-color: rgba($themeColor1, .5);
+    z-index: 6;
     .v-window__prev,
     .v-window__next {
       button {
